--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>{% block title %}{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        <title>{{ block('title') }}</title>
+        {% block head %}{% endblock -%}
+        {% block stylesheets %}{% endblock -%}
+        {% block javascripts %}{% endblock -%}
     </head>
 
     <body>
-        {% block body %}{% endblock %}
+        {{ block('layout') }}
     </body>
 </html>
