--- a/templates/page/homepage/index.html.twig
+++ b/templates/page/homepage/index.html.twig
@@ -1,7 +1,34 @@
 {% extends 'base.html.twig' %}
 
+{% block layout %}
+    {% embed 'layout/page.html.twig' %}
+        {% block content %}
+            <h1>Homepage</h1>
+        {% endblock %}
+    {% endembed %}
+{% endblock %}
+
+{% block head %}
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "url": "http://example.com/",
+            "potentialAction": {
+                "@type": "SearchAction",
+                "target": "http://example.com/search?&q={query}",
+                "query": "required"
+            }
+        }
+    </script>
+{% endblock %}
+
 {% block title 'Welcome' %}
 
-{% block body %}
-    <h1>Homepage</h1>
+{% block stylesheets %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+{% endblock %}
+
+{% block javascripts %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 {% endblock %}
